[package]
name = "cuo"
version = "0.3.0"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/cuo"
homepage = "https://github.com/shockham/cuo"
documentation = "https://docs.rs/cuo"
description = "Automated updating and git commiting of cargo project dependencies"

[dependencies]
git2 = "0.10"
cargo = "0.40"
dirs = "2.0"
